--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "express": "^4.21.0",
     "mongodb": "^6.9.0",
     "mongoose": "^8.7.0",
-    "nodemon": "^3.1.7"
+    "nodemon": "^3.1.7",
+    "pedalist-ecommerce-project": "file:"
   }
 }
