--- a/package.json
+++ b/package.json
@@ -9,11 +9,17 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "bcrypt": "^5.1.1",
     "dotenv": "^16.4.5",
+    "ejs": "^3.1.10",
     "express": "^4.21.0",
+    "express-session": "^1.18.1",
     "mongodb": "^6.9.0",
     "mongoose": "^8.7.0",
+    "nodemailer": "^6.9.15",
     "nodemon": "^3.1.7",
+    "passport": "^0.7.0",
+    "passport-google-oauth20": "^2.0.0",
     "pedalist-ecommerce-project": "file:"
   }
 }
