--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "express-session": "^1.18.1",
     "mongodb": "^6.9.0",
     "mongoose": "^8.7.0",
+    "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.9.15",
     "nodemon": "^3.1.7",
     "passport": "^0.7.0",
