--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "passport": "^0.7.0",
     "passport-google-oauth20": "^2.0.0",
     "pedalist-ecommerce-project": "file:",
+    "razorpay": "^2.9.5",
     "sharp": "^0.33.5",
     "uuid": "^10.0.0"
   }
