--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "mongodb": "^6.9.0",
     "mongoose": "^8.7.0",
     "multer": "^1.4.5-lts.1",
+    "node-cron": "^3.0.3",
     "nodemailer": "^6.9.15",
     "nodemon": "^3.1.7",
     "passport": "^0.7.0",
