sales report displayed and downloaded

--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
   "description": "",
   "dependencies": {
     "bcrypt": "^5.1.1",
+    "chart.js": "^4.4.6",
     "connect-flash": "^0.1.1",
     "dotenv": "^16.4.5",
     "ejs": "^3.1.10",
+    "exceljs": "^4.4.0",
     "express": "^4.21.0",
     "express-session": "^1.18.1",
     "mongodb": "^6.9.0",
@@ -23,6 +25,7 @@
     "nodemon": "^3.1.7",
     "passport": "^0.7.0",
     "passport-google-oauth20": "^2.0.0",
+    "pdfkit": "^0.15.1",
     "pedalist-ecommerce-project": "file:",
     "razorpay": "^2.9.5",
     "sharp": "^0.33.5",
