--- a/package.json
+++ b/package.json
@@ -31,5 +31,8 @@
     "razorpay": "^2.9.5",
     "sharp": "^0.33.5",
     "uuid": "^10.0.0"
+  },
+  "devDependencies": {
+    "prettier": "^3.3.3"
   }
 }
